After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 771004 - Fix exporting pango_cairo_win32_font_map_get_type
Fix exporting pango_cairo_win32_font_map_get_type
Status: RESOLVED FIXED
Product: pango
Classification: Platform
Component: win32
unspecified
Other Windows
: Normal normal
: ---
Assigned To: gtk-win32 maintainers
pango-maint
Depends on:
Blocks:
 
 
Reported: 2016-09-07 13:06 UTC by Patrick Griffis (tingping)
Modified: 2016-09-07 13:19 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix exporting pango_cairo_win32_font_map_get_type (691 bytes, patch)
2016-09-07 13:06 UTC, Patrick Griffis (tingping)
none Details | Review
Fix exporting pango_cairo_win32_font_map_get_type (764 bytes, patch)
2016-09-07 13:11 UTC, Patrick Griffis (tingping)
committed Details | Review

Description Patrick Griffis (tingping) 2016-09-07 13:06:34 UTC
Created attachment 334982 [details] [review]
Fix exporting pango_cairo_win32_font_map_get_type

Introduced with commit 1147da131ad13e583e73fed956e5c944e1497bf4
Comment 1 Patrick Griffis (tingping) 2016-09-07 13:11:33 UTC
Created attachment 334983 [details] [review]
Fix exporting pango_cairo_win32_font_map_get_type

Use the PANGO_AVAILABLE_IN_ALL macro
Comment 2 Ignacio Casal Quinteiro (nacho) 2016-09-07 13:13:24 UTC
Review of attachment 334983 [details] [review]:

Looks good. Feel free to backport it if needed.
Comment 3 Patrick Griffis (tingping) 2016-09-07 13:16:21 UTC
commited as e2ebedbac0d6b04ec298414eec02f4b4692392bc