Fix exporting pango_cairo_win32_font_map_get_type

Introduced with commit 1147da131ad13e583e73fed956e5c944e1497bf4

https://bugzilla.gnome.org/show_bug.cgi?id=771004